fixed weird logo spacing in navigation bar

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -8,7 +8,7 @@
 
   width:100%;
   height:80px;
-  padding:8px;
+  padding:16px;
   box-sizing: border-box;
   /* background:rgba(256,256,256,0.7); */
   background-color: var(--main-background-color);
@@ -41,8 +41,12 @@
   flex-wrap: nowrap;
 }
 
+.TucanNavigationLogo {
+  width:auto;
+  height:30px;
+}
 .TucanNavigationLogo img {
-  width:118px;
+  height:100%;
 }
 .TucanNavigationToggler {
   display:none;
@@ -206,8 +210,13 @@ a.navbar-brand {
 }
 
 @media only screen and (max-width: 600px) {
+  .TucanNavigationLogo {
+    height:auto;
+    width:90px;
+  }
   .TucanNavigationLogo img {
-    width:100px;
+    height:auto;
+    width:100%;
   }
   .TucanNavigationToggler {
     display:block;
@@ -241,7 +250,7 @@ a.navbar-brand {
     max-width: 60%;
     height:100%;
 
-    padding:8px;
+    padding:16px;
     box-sizing: border-box;
 
     background-color: var(--main-background-color);
@@ -253,6 +262,9 @@ a.navbar-brand {
     flex-direction: column;
     align-items: stretch;
   }
+    .TucanNavigationButtonSegment .NavItem button, .TucanNavigationButtonSegment .NavItem .button {
+      width:100%;
+    }
   .NavDropdownContents {
     left:0;
     right:initial;
@@ -260,8 +272,8 @@ a.navbar-brand {
     bottom:100%;
   }
   .NavItem {
-    margin-top:8px;
+    padding-left:0;
+    padding-right:0;
     margin-bottom:8px;
-    
   }
 }
